--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -10,6 +10,7 @@
             font-size: 12px;
             font-weight: 200;
             color: $soft-color;
+            text-transform: uppercase;
         }
         .listItem {
             display: flex;
@@ -17,7 +18,7 @@
             gap: 10px;
             padding: 10px;
 
-            &:hover{
+            &:hover {
                 background-color: $soft-bg;
             }
         }
